--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
     <div class="tl_main_card_wrap">
       <picture class="rlottie_image">
-        <source type="application/x-rlottie" srcset="/815df2ef527132dd23"></picture>
+        <source type="application/x-rlottie" srcset="http://localhost:3000/815df2ef527132dd23"></picture>
       <h3 class="tl_main_card_header">Private</h3>
       <div class="tl_main_card_lead"><b>Telegram</b> messages are heavily encrypted and can self-destruct.</div>
     </div>
